Use thesis/gcp-storage-bucket-action from alpine-version-413.0.0 branch
We temporarily change the version of `thesis/gcp-storage-bucket-action` code
used to publish the client image to the GCP. The version that we change to
builds the action using the `413.0.0-alpine` version of the cloud-sdk. We want
to do it because the latest version of the `cloud-sdk:alpine` resolves currently
to `414.0.0-alpine`, which intoduced a problem with execution of the `rsync`
command for requesters who do not have the `storage.buckets.get` permission. As
we use `rsync` in the `gcp-storage-bucket-action` action, we would be affected
by the issue if we would use the `v3.1.0` of the action (which uses latest
`cloud-sdk:alpine`).
More info:
https://cloud.google.com/storage/docs/release-notes#January_19_2023
https://github.com/GoogleCloudPlatform/gsutil/issues/1663
https://github.com/thesis/gcp-storage-bucket-action/commit/ee8b6a9cd45a26dbc6e9612fb1a2b95783adc1cf

--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -165,7 +165,11 @@ jobs:
 
       - name: Publish Client Binaries
         if: github.event_name == 'workflow_dispatch'
-        uses: thesis/gcp-storage-bucket-action@v3.1.0
+        # Temporarily we run the action in version from `alpine-version-413.0.0`
+        # branch, which contains a fix for the issue introduced in the `414.0.0`
+        # version (`rsync` fails for users with no `storage.buckets.get` 
+        # permission.
+        uses: thesis/gcp-storage-bucket-action@alpine-version-413.0.0 
         with:
           service-key: ${{ secrets.KEEP_TEST_CLIENT_BINARIES_UPLOADER_SERVICE_KEY_JSON_BASE64 }}
           # TODO: Change to keep-prd-210b once mainnet setup is done and we are sure we want to publish mainnet builds automatically.
