--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -74,6 +74,9 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+        # Temporarily fixing version to older `buildx` that worked in the past
+        with:
+          version: v0.9.1
 
       - name: Cache Docker layers
         uses: actions/cache@v2
