Switch minter and guardian to ethereum HTTP URL
WebSockets are not supported by the maintainer.

--- a/infrastructure/kube/keep-test/tbtc-v2-maintainer/guardian-statefulset.yaml
+++ b/infrastructure/kube/keep-test/tbtc-v2-maintainer/guardian-statefulset.yaml
@@ -58,7 +58,7 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: eth-network-goerli
-                  key: ws-url
+                  key: http-url
             - name: ELECTRUM_API_URL
               valueFrom:
                 configMapKeyRef:
