Set `ELECTRUM_URL` env

--- a/infrastructure/kube/templates/tbtc-v2-monitoring/tbtc-v2-monitoring-cronjob.yaml
+++ b/infrastructure/kube/templates/tbtc-v2-monitoring/tbtc-v2-monitoring-cronjob.yaml
@@ -33,6 +33,11 @@ spec:
                     secretKeyRef:
                       name: tbtc-v2-monitoring-config
                       key: ethereum-url
+                - name: ELECTRUM_URL
+                  valueFrom:
+                    secretKeyRef:
+                      name: tbtc-v2-monitoring-config
+                      key: electrum-url
                 - name: LARGE_DEPOSIT_THRESHOLD_SAT
                   valueFrom:
                     configMapKeyRef:
