--- a/infrastructure/kube/keep-test/btcdiff/btc-difficulty-client-config.yaml
+++ b/infrastructure/kube/keep-test/btcdiff/btc-difficulty-client-config.yaml
@@ -2,7 +2,10 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: btc-difficulty-maintainer-config
-  namespace: default
 data:
-  LOG_LEVEL: "keep*=info tss-lib=warn"
-  GOLOG_LOG_FMT: json
+  btc-difficulty-maintainer-config: |
+    [developer]
+      RandomBeaconAddress = "0x0000000000000000000000000000000000000000"
+      WalletRegistryAddress = "0x0000000000000000000000000000000000000000"
+      TokenStakingAddress = "0x0000000000000000000000000000000000000000"
+      LightRelayAddress = "0xEf47bfE31d60c802fBA84d6E40ac266f605C8558"
