--- a/infrastructure/kube/keep-test/btc-difficulty/maintainer-statefulset.yaml
+++ b/infrastructure/kube/keep-test/btc-difficulty/maintainer-statefulset.yaml
@@ -55,6 +55,11 @@ spec:
               secretKeyRef:
                 name: eth-network-goerli
                 key: ws-url
+          - name: ELECTRUM_API_URL
+            valueFrom:
+              configMapKeyRef:
+                name: electrum-api-mainnet
+                key: electrumx-url-tcp
           volumeMounts:
           - name: eth-account-keyfile
             mountPath: /mnt/btc-difficulty-maintainer/keyfile
@@ -72,7 +77,7 @@ spec:
           - --ethereum.keyFile
           - /mnt/btc-difficulty-maintainer/keyfile/btc-difficulty-maintainer-keyfile
           - --bitcoin.electrum.url
-          - "electrum.blockstream.info:50001"
+          - $(ELECTRUM_API_URL)
           - --bitcoin.electrum.protocol
           - "TCP"
           - --config
