--- a/test/config.yaml
+++ b/test/config.yaml
@@ -39,3 +39,4 @@ Developer:
   TokenStakingAddress: "0xa363a197f1bbb8877f50350234e3f15fb4175457"
   BridgeAddress: "0x138D2a0c87BA9f6BE1DCc13D6224A6aCE9B6b6F0"
   LightRelayAddress: "0x68e20afD773fDF1231B5cbFeA7040e73e79cAc36"
+  LightRelayMaintainerProxyAddress: "0x30cd93828613D5945A2916a22E0f0e9bC561EAB5"
