--- a/.github/workflows/contracts-ecdsa-docs.yml
+++ b/.github/workflows/contracts-ecdsa-docs.yml
@@ -67,7 +67,7 @@ jobs:
       destinationRepo: threshold-network/threshold
       destinationFolder: ./docs/app-development/tbtc-v2/ecdsa-api
       destinationBranch: main
-      userEmail: thesis-valkyrie@users.noreply.github.com
+      userEmail: valkyrie@thesis.co
       userName: Valkyrie
     secrets:
       githubToken: ${{ secrets.THRESHOLD_DOCS_GITHUB_TOKEN }}
