--- a/configs/config.toml.SAMPLE
+++ b/configs/config.toml.SAMPLE
@@ -117,7 +117,7 @@ Port = 9601
 # PreParamsGenerationTimeout = "2m"
 # PreParamsGenerationDelay = "10s"
 # PreParamsGenerationConcurrency = 1
-# KeyGenConcurrency = 1
+# KeyGenerationConcurrency = 1
 
 # Developer options to work with locally deployed contracts
 #
