--- a/.github/workflows/contracts-ecdsa-docs.yml
+++ b/.github/workflows/contracts-ecdsa-docs.yml
@@ -44,7 +44,7 @@ jobs:
         || github.event_name == 'workflow_dispatch'
     uses: keep-network/ci/.github/workflows/reusable-solidity-docs.yml@main
     with:
-      projectSubfolder: /solidity/ecdsa
+      projectDir: /solidity/ecdsa
       publish: false
       commentPR: true
       exportAsGHArtifacts: true
@@ -61,7 +61,7 @@ jobs:
     if: github.event_name == 'release' && startsWith(github.ref, 'refs/tags/solidity/')
     uses: keep-network/ci/.github/workflows/reusable-solidity-docs.yml@main
     with:
-      projectSubfolder: /solidity/ecdsa
+      projectDir: /solidity/ecdsa
       publish: true
       verifyCommits: true
       destinationRepo: threshold-network/threshold
