Aligned unit tests

--- a/test/config.yaml
+++ b/test/config.yaml
@@ -33,6 +33,7 @@ ClientInfo:
   EthereumMetricsTick: "1m27s"
 Maintainer:
     BitcoinDifficulty: true
+    UseBitcoinDifficultyProxy: true
 Developer:
   RandomBeaconAddress: "0xcf64c2a367341170cb4e09cf8c0ed137d8473ceb"
   WalletRegistryAddress: "0x143ba24e66fce8bca22f7d739f9a932c519b1c76"
