--- a/solidity-v1/dashboard/package.json
+++ b/solidity-v1/dashboard/package.json
@@ -10,9 +10,10 @@
     "@keep-network/keep-ecdsa": ">1.9.0-dev <1.9.0-ropsten",
     "@keep-network/tbtc": ">1.1.2-dev <1.1.2-pre",
     "@keep-network/tbtc-v2": ">0.1.1-dev <0.1.1-ropsten",
-    "@threshold-network/solidity-contracts": ">1.1.0-dev <1.1.0-ropsten",
     "@ledgerhq/hw-app-eth": "^5.13.0",
     "@ledgerhq/hw-transport-webusb": "^6.24.1",
+    "@rehooks/local-storage": "^2.4.4",
+    "@threshold-network/solidity-contracts": ">1.1.0-dev <1.1.0-ropsten",
     "@walletconnect/web3-subprovider": "^1.3.6",
     "axios": "^0.21.2",
     "bignumber.js": "9.0.0",
