Connect `keep-test` clients to testnet ElectrumX instance

--- a/infrastructure/kube/keep-test/keep-client/gen/template.yaml
+++ b/infrastructure/kube/keep-test/keep-client/gen/template.yaml
@@ -90,6 +90,8 @@ spec:
             - $(ETH_WS_URL)
             - "--ethereum.keyFile"
             -  #@ "/mnt/keep-client/keyfile/" + account() + "-keyfile"
+            - --bitcoin.electrum.url
+            - $(ELECTRUM_TCP_URL)
             - "--storage.dir"
             - "/mnt/keep-client/data"
             - "--network.port"
