Replaced development option with goerli option

--- a/infrastructure/kube/keep-test/btc-difficulty/maintainer-statefulset.yaml
+++ b/infrastructure/kube/keep-test/btc-difficulty/maintainer-statefulset.yaml
@@ -70,8 +70,7 @@ spec:
           - maintainer
           args:
           - --bitcoinDifficulty
-          # run as developer to be able to set LightRelay address
-          - --developer
+          - --goerli
           - --ethereum.url
           - $(ETH_WS_URL)
           - --ethereum.keyFile
