Store keyfile locally
We don't want to commit the keyfile to public repository for production,
and for consistency we need to do the same for testnet.

--- a/infrastructure/kube/keep-test/btc-difficulty/maintainer-statefulset.yaml
+++ b/infrastructure/kube/keep-test/btc-difficulty/maintainer-statefulset.yaml
@@ -43,7 +43,7 @@ spec:
             valueFrom:
               secretKeyRef:
                 name: btc-difficulty-maintainer-eth-accounts-password
-                key: eth-account-password
+                key: btc-difficulty-maintainer-password
           - name: ETH_WS_URL
             valueFrom:
               secretKeyRef:
