Switch btc-difficulty electrum api url
We update electrum url for keep-prod to the electrumx node that is
running in our cluster.
The previous blockstream's server is very unstable and keeps droping the
connection which outputs a lot of warnings in logs.

--- a/infrastructure/kube/keep-prd/btc-difficulty/kustomization.yaml
+++ b/infrastructure/kube/keep-prd/btc-difficulty/kustomization.yaml
@@ -14,7 +14,7 @@ configMapGenerator:
       - .secret/btc-difficulty-maintainer-keyfile
   - name: electrum-api-mainnet
     literals:
-      - electrumx-url-tcp=electrum.blockstream.info:50001
+      - electrumx-url-ssl=electrumx.default.svc.cluster.local:443
 
 secretGenerator:
   - name: btc-difficulty-maintainer-eth-accounts-password
