Include Protocol in Electrum URL
Closes: https://github.com/keep-network/keep-core/issues/3580

For consistency and simplifiaction we include the protocol for electrum
connection inside the electrum URL.

--- a/configs/config.toml.SAMPLE
+++ b/configs/config.toml.SAMPLE
@@ -47,13 +47,10 @@ KeyFile = "/Users/someuser/ethereum/data/keystore/UTC--2018-03-11T01-37-33.20276
 # BalanceAlertThreshold = "0.5 ether" # 0.5 ether (default value)
 
 [bitcoin.electrum]
-# URL to the Electrum server in format: `hostname:port`.
+# URL to the Electrum server in format: `scheme://hostname:port`.
 # Should be uncommented only when using a custom Electrum server. Otherwise,
 # one of the default embedded servers is selected randomly at startup.
-URL = "electrumx.server.io:50001"
-
-# Electrum server connection protocol (`TCP` or `SSL`).
-# Protocol = "tcp"
+# URL = "tcp://electrumx.server.io:50001"
 
 # Timeout for a single attempt of Electrum connection establishment.
 # ConnectTimeout = "10s"
