--- a/test/config.toml
+++ b/test/config.toml
@@ -11,8 +11,7 @@ MaxGasFeeCap = "148 Gwei"
 BalanceAlertThreshold = "2.3 ether"
 
 [bitcoin.electrum]
-URL = "url.to.electrum:18332"
-Protocol = "ssl"
+URL = "ssl://url.to.electrum:18332"
 ConnectTimeout = "54s"
 ConnectRetryTimeout = "3m12s"
 RequestTimeout = "1m34s"
