--- a/test/config.yaml
+++ b/test/config.yaml
@@ -9,8 +9,7 @@ Ethereum:
   BalanceAlertThreshold: 2.3 ether
 Bitcoin:
   Electrum:
-    URL: "url.to.electrum:18332"
-    Protocol: ssl
+    URL: "ssl://url.to.electrum:18332"
     ConnectTimeout: 54s
     ConnectRetryTimeout: 3m12s
     RequestTimeout: 1m34s
@@ -32,8 +31,8 @@ ClientInfo:
   NetworkMetricsTick: "43s"
   EthereumMetricsTick: "1m27s"
 Maintainer:
-    BitcoinDifficulty: true
-    DisableBitcoinDifficultyProxy: true
+  BitcoinDifficulty: true
+  DisableBitcoinDifficultyProxy: true
 Developer:
   RandomBeaconAddress: "0xcf64c2a367341170cb4e09cf8c0ed137d8473ceb"
   WalletRegistryAddress: "0x143ba24e66fce8bca22f7d739f9a932c519b1c76"
