--- a/solidity-v1/dashboard/package.json
+++ b/solidity-v1/dashboard/package.json
@@ -1,18 +1,18 @@
 {
   "name": "dashboard",
-  "version": "1.20.0-pre",
+  "version": "1.20.0",
   "private": true,
   "license": "MIT",
   "dependencies": {
     "@0x/subproviders": "^6.0.8",
-    "@keep-network/coverage-pools": "1.1.0-dev.2",
-    "@keep-network/keep-core": ">1.8.0-dev <1.8.0-pre",
-    "@keep-network/keep-ecdsa": ">1.9.0-dev <1.9.0-ropsten",
-    "@keep-network/tbtc": ">1.1.2-dev <1.1.2-pre",
+    "@keep-network/coverage-pools": "1.0.0",
+    "@keep-network/keep-core": "1.8.0",
+    "@keep-network/keep-ecdsa": "1.8.0",
+    "@keep-network/tbtc": "1.1.0",
     "@ledgerhq/hw-app-eth": "^5.13.0",
     "@ledgerhq/hw-transport-webusb": "^6.24.1",
     "@rehooks/local-storage": "^2.4.4",
-    "@threshold-network/solidity-contracts": ">1.1.0-dev <1.1.0-ropsten",
+    "@threshold-network/solidity-contracts": "1.2.1",
     "@walletconnect/web3-subprovider": "^1.3.6",
     "axios": "^0.21.2",
     "bignumber.js": "9.0.0",
